k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizenportal-backend
  labels:
    app: citizenportal-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: citizenportal-backend
  template:
    metadata:
      labels:
        app: citizenportal-backend
    spec:
      containers:
        - name: backend
          image: citizenportalacr.azurecr.io/citizenportal-backend:latest
          ports:
            - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizenportal-frontend
  labels:
    app: citizenportal-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: citizenportal-frontend
  template:
    metadata:
      labels:
        app: citizenportal-frontend
    spec:
      containers:
        - name: frontend
          image: citizenportalacr.azurecr.io/citizenportal-frontend:latest
          ports:
            - containerPort: 80
