k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: citizenportal-backend
spec:
  selector:
    app: citizenportal-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: citizenportal-frontend
spec:
  selector:
    app: citizenportal-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
