k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citizenportal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: citizenportal-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: citizenportal-frontend
                port:
                  number: 80
